--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Andrew Fairbairn</title>
 <meta charset="UTF-8">
-<meta name="description" content="Andrew Fairbairn - Associate Software Developer at Sky - Co-Founder of Liveblog Pro - Computer Science Graduate from the University of York">
+<meta name="description" content="Andrew Fairbairn - Software Developer at Sky - Co-Founder of Liveblog Pro">
 <meta name="author" content="Andrew Fairbairn">
 <meta name="keywords" content="Andrew,Fairbairn">
 <meta name="robots" content="index,follow">
@@ -20,7 +20,7 @@
 <div id="container">
     <section>
         <article id="sky" itemprop="description">
-            <h2 itemprop="jobTitle">Associate Software Developer</h2><h3> at <a href="http://www.sky.com/" title="BSkyB" itemprop="worksFor">Sky</a></h3>
+            <h2 itemprop="jobTitle">Software Developer</h2><h3> at <a href="http://www.sky.com/" title="Sky UK Limited" itemprop="worksFor">Sky</a></h3>
         </article>
         <article id="lbp">
             <h2>Co-Founder</h2><h3> of <a href="http://www.liveblogpro.com/" title="Liveblog Pro (Upstart Media Ltd)" itemprop="brand">Liveblog Pro</a></h3>
