More URLs on https by default

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="icon" href="favicon.ico">
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Belgrano|Telex|Antic">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Belgrano|Telex|Antic">
 </head>
-<body itemscope itemtype="http://schema.org/Person">
+<body itemscope itemtype="https://schema.org/Person">
 <header>
     <h1 itemprop="name">Andrew Fairbairn</h1>
     <div id="animation"></div>
@@ -20,13 +20,13 @@
 <div id="container">
     <section>
         <article id="sky" itemprop="description">
-            <h2 itemprop="jobTitle">Software Developer</h2><h3> at <a href="http://www.sky.com/" title="Sky UK Limited" itemprop="worksFor">Sky</a></h3>
+            <h2 itemprop="jobTitle">Software Developer</h2><h3> at <a href="https://www.sky.com/" title="Sky UK Limited" itemprop="worksFor">Sky</a></h3>
         </article>
         <article id="lbp">
-            <h2>Co-Founder</h2><h3> of <a href="http://www.liveblogpro.com/" title="Liveblog Pro (Upstart Media Ltd)" itemprop="brand">Liveblog Pro</a></h3>
+            <h2>Co-Founder</h2><h3> of <a href="https://www.liveblogpro.com/" title="Liveblog Pro (Upstart Media Ltd)" itemprop="brand">Liveblog Pro</a></h3>
         </article>
         <article id="york">
-            <h2 title="MEng (Hons) Computer Systems and Software Engineering (with a year in industry) (1st)">Computer Science Graduate</h2><h3> from the <a href="http://www.york.ac.uk/" title="University of York (Ebor)" itemprop="alumniOf">University of York</a></h3>
+            <h2 title="MEng (Hons) Computer Systems and Software Engineering (with a year in industry) (1st)">Computer Science Graduate</h2><h3> from the <a href="https://www.york.ac.uk/" title="University of York (Ebor)" itemprop="alumniOf">University of York</a></h3>
         </article>
     </section>
     <aside itemprop="contactPoints">
@@ -37,7 +37,7 @@
             <li><a href="http://www.last.fm/user/af-" title="Last.fm" id="lastfm">Last.fm</a></li>
             <li><a href="https://www.flickr.com/photos/_af" title="Flickr" id="flickr">Flickr</a></li>
             <li><a href="https://www.icheckmovies.com/profiles/af/" title="iCheckMovies" id="icm">iCheckMovies</a></li>
-            <li><a href="http://uk.linkedin.com/in/afairbairn" title="LinkedIn" id="linked">LinkedIn</a></li>
+            <li><a href="https://www.linkedin.com/in/afairbairn" title="LinkedIn" id="linked">LinkedIn</a></li>
             <li><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#104;&#101;&#108;&#108;&#111;&#64;&#97;&#102;&#97;&#105;&#114;&#98;&#46;&#117;&#107;" title="&#104;&#101;&#108;&#108;&#111;&#32;&#64;&#32;&#97;&#102;&#97;&#105;&#114;&#98;&#46;&#117;&#107;" id="mail">Email</a></li>
         </ul>
     </aside>
