--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
 <title>Andrew Fairbairn</title>
 <meta charset="UTF-8">
+<script>if (location.protocol !== 'https:') location.protocol = 'https';</script>
 <meta name="description" content="Andrew Fairbairn - Software Developer at Sky - Co-Founder of Liveblog Pro">
 <meta name="author" content="Andrew Fairbairn">
 <meta name="keywords" content="Andrew,Fairbairn">
 <meta name="robots" content="index,follow">
 <meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="canonical" href="https://afairb.uk/">
 <link rel="icon" href="favicon.ico">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Belgrano|Telex|Antic">
