Add GitHub link and icon

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <li><a href="https://www.facebook.com/andy.fairbairn" title="Facebook" id="facebook">Facebook</a></li>
             <li><a href="https://twitter.com/afairb" title="Twitter" id="twitter">Twitter</a></li>
             <li><a href="http://gplus.to/afairb" title="Google+" id="gplus">Google+</a></li>
+            <li><a href="https://github.com/afairb" title="GitHub" id="github">GitHub</a></li>
             <li><a href="http://www.last.fm/user/af-" title="Last.fm" id="lastfm">Last.fm</a></li>
             <li><a href="https://www.flickr.com/photos/_af" title="Flickr" id="flickr">Flickr</a></li>
             <li><a href="https://www.icheckmovies.com/profiles/af/" title="iCheckMovies" id="icm">iCheckMovies</a></li>
