--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </section>
     <aside itemprop="contactPoints">
         <ul>
-            <li><a href="https://www.facebook.com/andy.fairbairn" title="Facebook" id="facebook">Facebook</a></li>
+            <li><a href="https://www.facebook.com/afairb" title="Facebook" id="facebook">Facebook</a></li>
             <li><a href="https://twitter.com/afairb" title="Twitter" id="twitter">Twitter</a></li>
             <li><a href="http://gplus.to/afairb" title="Google+" id="gplus">Google+</a></li>
             <li><a href="https://github.com/afairb" title="GitHub" id="github">GitHub</a></li>
