--- a/index.html
+++ b/index.html
@@ -2,49 +2,46 @@
 <html>
 <head>
 <title>Andrew Fairbairn</title>
-<meta charset="UTF-8">
-<script>if (location.protocol !== 'https:') location.protocol = 'https';</script>
-<meta name="description" content="Andrew Fairbairn - Software Developer at Sky - Co-Founder of Liveblog Pro">
+<meta charset="utf-8">
+<meta name="description" content="Andrew Fairbairn - Senior Product Engineer at Ambassador Theatre Group - Full Stack Software Engineer in London, UK">
 <meta name="author" content="Andrew Fairbairn">
 <meta name="keywords" content="Andrew,Fairbairn">
 <meta name="robots" content="index,follow">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="canonical" href="https://afairb.uk/">
+<link rel="canonical" href="https://afairb.uk">
 <link rel="icon" href="favicon.ico">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Belgrano|Telex|Antic">
 </head>
 <body itemscope itemtype="https://schema.org/Person">
 <header>
-    <h1 itemprop="name">Andrew Fairbairn</h1>
-    <div id="animation"></div>
+  <h1 itemprop="name">Andrew Fairbairn</h1>
 </header>
-<div id="container">
-    <section>
-        <article id="sky" itemprop="description">
-            <h2 itemprop="jobTitle">Software Developer</h2><h3> at <a href="https://www.sky.com/" title="Sky UK Limited" itemprop="worksFor">Sky</a></h3>
-        </article>
-        <article id="lbp">
-            <h2>Co-Founder</h2><h3> of <a href="https://www.liveblogpro.com/" title="Liveblog Pro (Upstart Media Ltd)" itemprop="brand">Liveblog Pro</a></h3>
-        </article>
-        <article id="york">
-            <h2 title="MEng (Hons) Computer Systems and Software Engineering (with a year in industry) (1st)">Computer Science Graduate</h2><h3> from the <a href="https://www.york.ac.uk/" title="University of York (Ebor)" itemprop="alumniOf">University of York</a></h3>
-        </article>
-    </section>
-    <aside itemprop="contactPoints">
-        <ul>
-            <li><a href="https://www.facebook.com/afairb" title="Facebook" id="facebook">Facebook</a></li>
-            <li><a href="https://twitter.com/afairb" title="Twitter" id="twitter">Twitter</a></li>
-            <li><a href="http://gplus.to/afairb" title="Google+" id="gplus">Google+</a></li>
-            <li><a href="https://github.com/afairb" title="GitHub" id="github">GitHub</a></li>
-            <li><a href="http://www.last.fm/user/af-" title="Last.fm" id="lastfm">Last.fm</a></li>
-            <li><a href="https://www.flickr.com/photos/_af" title="Flickr" id="flickr">Flickr</a></li>
-            <li><a href="https://www.icheckmovies.com/profiles/af/" title="iCheckMovies" id="icm">iCheckMovies</a></li>
-            <li><a href="https://www.linkedin.com/in/afairbairn" title="LinkedIn" id="linked">LinkedIn</a></li>
-            <li><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#104;&#101;&#108;&#108;&#111;&#64;&#97;&#102;&#97;&#105;&#114;&#98;&#46;&#117;&#107;" title="&#104;&#101;&#108;&#108;&#111;&#32;&#64;&#32;&#97;&#102;&#97;&#105;&#114;&#98;&#46;&#117;&#107;" id="mail">Email</a></li>
-        </ul>
+<main>
+  <section>
+    <h2 itemprop="description">Full Stack Software Engineer <small>in <span itemprop="workLocation">London, UK</span></small></h2>
+    <aside>
+      <article>
+        <h3><span itemprop="jobTitle">Senior Product Engineer</span> at <a href="https://www.atgtickets.com" itemprop="worksFor">Ambassador Theatre Group</a></h3>
+      </article>
+      <article>
+        <h3>Co-Founder of <a href="https://www.liveblogpro.com" itemprop="brand">Liveblog Pro</a></h3>
+      </article>
     </aside>
-</div>
+  </section>
+  <footer itemprop="contactPoint">
+    <ul>
+      <li><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#104;&#101;&#108;&#108;&#111;&#64;&#97;&#102;&#97;&#105;&#114;&#98;&#46;&#117;&#107;" id="mail" itemprop="email">Email</a></li>
+      <li><a href="https://www.linkedin.com/in/afairbairn" id="linkedin">LinkedIn</a></li>
+      <li><a href="https://github.com/afairb" id="github">GitHub</a></li>
+      <li><a href="https://www.facebook.com/afairb" id="facebook">Facebook</a></li>
+      <li><a href="https://instagram.com/a_fairb" id="instagram">Instagram</a></li>
+      <li><a href="https://twitter.com/afairb" id="twitter">Twitter</a></li>
+      <li><a href="https://www.last.fm/user/af-" id="lastfm">Last.fm</a></li>
+      <li><a href="https://www.icheckmovies.com/profiles/af/" id="icm">iCheckMovies</a></li>
+    </ul>
+  </footer>
+</main>
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-18390700-2','auto');ga('require','displayfeatures');ga('send','pageview');
 </script>
