Long overdue update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Andrew Fairbairn</title>
 <meta charset="utf-8">
-<meta name="description" content="Andrew Fairbairn - Senior Product Engineer at Ambassador Theatre Group - Full Stack Software Engineer in London, UK">
+<meta name="description" content="Andrew Fairbairn - Principal Engineer at Ambassador Theatre Group - Full Stack Software Engineer in London, UK">
 <meta name="author" content="Andrew Fairbairn">
 <meta name="keywords" content="Andrew,Fairbairn">
 <meta name="robots" content="index,follow">
@@ -21,24 +21,30 @@
   <section>
     <h2 itemprop="description">Full Stack Software Engineer <small>in <span itemprop="workLocation">London, UK</span></small></h2>
     <aside>
-      <article>
-        <h3><span itemprop="jobTitle">Senior Product Engineer</span> at <a href="https://www.atgtickets.com" itemprop="worksFor">Ambassador Theatre Group</a></h3>
+      <article class="dot">
+        <h3><span itemprop="jobTitle">Principal Engineer</span> at <a href="https://www.atgtickets.com/" itemprop="worksFor">Ambassador Theatre Group</a></h3>
       </article>
       <article>
-        <h3>Co-Founder of <a href="https://www.liveblogpro.com" itemprop="brand">Liveblog Pro</a></h3>
+        <h4>Currently focused on:</h4>
+        <ul itemprop="knowsAbout">
+          <li class="dot"><span>Node.js, TypeScript, React, Redux, GraphQL</span></li>
+          <li class="dot"><span>Serverless, microservices, event-driven architecture</span></li>
+          <li class="dot"><span>AWS (Lambda, API Gateway, more), Terraform</span></li>
+          <li class="dot"><span>CI/CD, monitoring, alerting</span></li>
+        </ul>
       </article>
     </aside>
   </section>
-  <footer itemprop="contactPoint">
+  <footer>
     <ul>
-      <li><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#104;&#101;&#108;&#108;&#111;&#64;&#97;&#102;&#97;&#105;&#114;&#98;&#46;&#117;&#107;" id="mail" itemprop="email">Email</a></li>
-      <li><a href="https://www.linkedin.com/in/afairbairn" id="linkedin">LinkedIn</a></li>
-      <li><a href="https://github.com/afairb" id="github">GitHub</a></li>
-      <li><a href="https://www.facebook.com/afairb" id="facebook">Facebook</a></li>
-      <li><a href="https://instagram.com/a_fairb" id="instagram">Instagram</a></li>
-      <li><a href="https://twitter.com/afairb" id="twitter">Twitter</a></li>
-      <li><a href="https://www.last.fm/user/af-" id="lastfm">Last.fm</a></li>
-      <li><a href="https://www.icheckmovies.com/profiles/af/" id="icm">iCheckMovies</a></li>
+      <li itemprop="contactPoint"><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#104;&#101;&#108;&#108;&#111;&#64;&#97;&#102;&#97;&#105;&#114;&#98;&#46;&#117;&#107;" id="mail">Email</a></li>
+      <li itemprop="contactPoint" itemscope itemtype="http://schema.org/ContactPoint"><a href="https://www.linkedin.com/in/afairbairn" id="linkedin" itemprop="url">LinkedIn</a></li>
+      <li itemprop="contactPoint" itemscope itemtype="http://schema.org/ContactPoint"><a href="https://github.com/afairb" id="github" itemprop="url">GitHub</a></li>
+      <li itemprop="contactPoint" itemscope itemtype="http://schema.org/ContactPoint"><a href="https://www.facebook.com/afairb" id="facebook" itemprop="url">Facebook</a></li>
+      <li itemprop="contactPoint" itemscope itemtype="http://schema.org/ContactPoint"><a href="https://instagram.com/a_fairb" id="instagram" itemprop="url">Instagram</a></li>
+      <li itemprop="contactPoint" itemscope itemtype="http://schema.org/ContactPoint"><a href="https://twitter.com/afairb" id="twitter" itemprop="url">Twitter</a></li>
+      <li itemprop="contactPoint" itemscope itemtype="http://schema.org/ContactPoint"><a href="https://www.last.fm/user/af-" id="lastfm" itemprop="url">Last.fm</a></li>
+      <li itemprop="contactPoint" itemscope itemtype="http://schema.org/ContactPoint"><a href="https://www.icheckmovies.com/profiles/af/" id="icm" itemprop="url">iCheckMovies</a></li>
     </ul>
   </footer>
 </main>
